# jellyfin-rpc-iced

./: .gitmodules  Cargo.toml  README.md
.github/: FUNDING.yml
src/: main.rs  server.rs  window.rs
