[package]
name    = "jellyfin-rpc-iced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rich-presence = "0.2"
retry                 = "2.0"
serde_json            = "1.0"

[dependencies.iced]
features = ["tokio", "default"]
version  = "0.10"

[dependencies.jellyfin-rpc]
features = ["imgur"]
version = "0.1.1"

[dependencies.clap]
features = ["derive"]
version  = "4.1"

[dependencies.tokio]
features = ["full"]
version  = "1"

[dependencies.serde]
features = ["derive"]
version  = "1.0"
